# Thermal_Envelope_public

./: .gitignore  LICENSE  QUICKSTART.md  README.md  config.yaml  main.py  pyproject.toml  solver_config.yaml
decay_preprocessor/: README.md  __init__.py  bateman_solver.py  chain_parser.py  config_loader.py  decay_fitter.py  preprocessor_config.yaml  run_preprocessor.py
docs/: QUICKSTART.md  TECHNICAL_OVERVIEW.md
examples/: copenhagen_wasteforms  example_inventory.csv
src/: config_loader.py
src/analysis/: pipeline.py  plotting.py
src/physics/: analytical.py  fem_solver.py
tests/: test_analytical.py  test_bateman_solver.py  test_chain_parser.py  test_config.py  test_decay_fitter.py  test_edge_cases.py  test_fem_solver.py  test_integration.py  test_pipeline.py
tests/data/: Optimistic_composition_5y.csv
thermal_envelope/: __init__.py  __main__.py  config_loader.py  constants.py
thermal_envelope/analysis/: pipeline.py
thermal_envelope/physics/: fem_solver.py
